Erro na tag nb-card   nb-card-body componente do nebular

--- a/FrontEnd-PetShopBand/front-petshopband/src/app/app.component.html
+++ b/FrontEnd-PetShopBand/front-petshopband/src/app/app.component.html
@@ -6,10 +6,16 @@
 
   <nb-layout-column>
     
-    <style>
-      
-    </style>
+    <br>
+    <br>
     
+    <div class="content">
+      <app-login></app-login>
+    </div>    
+    
+    <br>
+    <br>
+
     <!-- Toolbar -->
     <div class="toolbar" role="banner">
       <img
